# voicebot-platform

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
docs/: deployment.md  tata-integration.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json
services/api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
services/api/alembic/: env.py  script.py.mako
services/api/alembic/versions/: 20260101_0000_initial.py  20260507_2300_campaign_bot_config.py  20260721_1200_hospital_crm.py
services/api/app/: __init__.py  config.py  db.py  deps.py  logging_setup.py  main.py  models.py  schemas.py  security.py
services/api/app/routers/: auth.py  calls.py  campaigns.py  crm.py  webhooks.py
services/api/app/scripts/: seed.py
services/api/tests/: conftest.py  test_auth.py  test_calls.py  test_campaign_sweep.py  test_campaigns_bot_config.py  test_crm.py  test_webhooks.py
services/bridge/: Dockerfile  pyproject.toml  requirements.txt
services/bridge/app/: __init__.py  agent.py  api_client.py  audio.py  config.py  log_config.json  logging_setup.py  main.py  metrics.py  openai_realtime.py  persistence.py  session.py  tools.py
services/bridge/app/telephony/: __init__.py  base.py  mock.py  tata.py
services/bridge/tests/: conftest.py  test_agent.py  test_api_client.py  test_audio.py  test_recorder.py  test_session_watchdog.py  test_session_wrap_up.py  test_tata_adapter.py  test_tools.py
(+23 files in other folders)
