[project]
name = "voicebot-api"
version = "0.1.0"
description = "Backend API: auth, calls, campaigns, CRM, webhooks"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "PT", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]
"alembic/versions/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["passlib.*", "jose.*", "alembic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
